# Lead-Gen-Enigne

./: .env.example  .gitignore  CLAUDE.md  HANDOVER.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.bat  run.sh
alembic/: env.py
alembic/versions/: 1da8ea9487ef_add_job_source_and_queries.py  356efb9588c3_initial_schema_users_leads_jobs_activity.py  9af59f5f423c_add_geo_coordinates_to_jobs.py  a0dd80624b1d_add_find_leads_search_params_to_jobs.py  b7c4e2f1a9d3_add_lead_enrichment.py  da19fea7314f_add_user_target.py
backend/: __init__.py  app.py  auth.py  config.py  db.py  models.py  schemas.py  secrets.example.py
backend/prompts/: abaya.md  autoparts_b2b.md  default.md
backend/routers/: auth.py  jobs.py  leads.py  reports.py
backend/scripts/: __init__.py  reset_db.py  seed_leads.py  seed_users.py
backend/services/: __init__.py  expand.py  geocode.py  intake.py  linkedin.py  quality.py  scorer.py  scraper.py  whatsapp.py
backend/tests/: conftest.py  test_auth.py  test_expand.py  test_intake.py  test_jobs.py  test_leads.py  test_quality.py  test_reports.py  test_scorer.py
frontend/: index.html  login.html  styles.css
frontend/js/: api.js  app.js  store.js
frontend/js/components/: job_card.js  kpi_card.js  lead_detail_panel.js  lead_row.js  pending_review.js  sidebar.js  status_tabs.js
frontend/js/views/: find.js  lead_detail.js  pipeline.js  reports.js
reference/: Lead_Pipeline_CRM_design_reference.html  gosom_sample_output.csv  leadgen_build_doc.html
